--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/elements": "^2.2.4",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
     "@react-navigation/stack": "^7.0.18",
+    "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-reanimated": "^3.16.4",
+    "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0"
@@ -32,13 +34,14 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.5",
+    "@react-native/babel-preset": "^0.76.5",
     "@react-native/eslint-config": "0.76.5",
     "@react-native/metro-config": "0.76.5",
     "@react-native/typescript-config": "0.76.5",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.14",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.1",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
